--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+build/
+obj/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -43,6 +45,12 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+
+# Visual Studio Code generated files
+.vscode/*
+*.launch.json
+*.vsixmanifest
+*.vscodeignore
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
